# SimpleTestingWithBoost

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/include/: simple_math.hpp
lib/src/: simple_math.cpp
tests/: CMakeLists.txt  test_1.cpp  test_2.cpp
